--- a/KOOPOMICS/examples/Testing.ipynb
+++ b/KOOPOMICS/examples/Testing.ipynb
@@ -1,14 +1,70 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "42189075-2b3f-407f-9a2f-69b24d66535b",
+   "metadata": {},
+   "source": [
+    "# Testing Notebook"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "id": "27700e00-69a1-4870-aeb6-42d825e0ccde",
    "metadata": {},
    "outputs": [],
    "source": [
-    "ls ssh"
+    "import sys\n",
+    "import os\n",
+    "import importlib\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "7e530a33-c460-42a2-951a-25f56f78f091",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import koopomics.model as ko"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b7ca3d7f-1e96-41a7-aaf3-c542e1b22bad",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "7a343361-e649-4f29-a6da-23e27ceb4f86",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "hello world 8\n"
+     ]
+    }
+   ],
+   "source": [
+    "importlib.reload(ko.model_loader)\n",
+    "\n",
+    "ko.model_loader.hello_world()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2c1ec7b6-df1c-4d6a-b951-101dcf75446f",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -27,7 +83,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.4"
+   "version": "3.9.20"
   }
  },
  "nbformat": 4,
