--- a/KOOPOMICS/examples/Testing.ipynb
+++ b/KOOPOMICS/examples/Testing.ipynb
@@ -22,46 +22,208 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 3,
    "id": "7e530a33-c460-42a2-951a-25f56f78f091",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import koopomics.model as ko"
+    "import koopomics.model.model_loader as ko\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "b7ca3d7f-1e96-41a7-aaf3-c542e1b22bad",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 21,
-   "id": "7a343361-e649-4f29-a6da-23e27ceb4f86",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "hello world 8\n"
-     ]
+     "data": {
+      "text/plain": [
+       "<module 'koopomics.model.koopmanANN' from '/Users/daviddornig/miniconda3/envs/KOOPAE/lib/python3.12/site-packages/koopomics/model/koopmanANN.py'>"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "importlib.reload(ko.model_loader)\n",
-    "\n",
-    "ko.model_loader.hello_world()"
+    "import koopomics.model.embeddingANN as em\n",
+    "import koopomics.model.koopmanANN as op\n",
+    "importlib.reload(em)\n",
+    "importlib.reload(op)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "728a20af-6e10-4570-afb6-390ca05c643d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<module 'koopomics.model.model_loader' from '/Users/daviddornig/miniconda3/envs/KOOPAE/lib/python3.12/site-packages/koopomics/model/model_loader.py'>"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "importlib.reload(ko)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "bfb4f7df-4850-4a83-865a-2f51ac58dc71",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "embedding_model = em.FF_AE([200,100,100,20], [20,100,100,200])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "73866519-c876-4eec-9073-bda346b3c165",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "embedding_model = em.DiffeomMap([200,100,100,20],[20,100,100,200],[1,3,5])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "422d2826-8033-4004-98cb-7ad34b0f0ebd",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "DiffeomMap(\n",
+       "  (encode_NN): Sequential(\n",
+       "    (0): Linear(in_features=200, out_features=100, bias=True)\n",
+       "    (1): ReLU()\n",
+       "    (2): Linear(in_features=100, out_features=100, bias=True)\n",
+       "    (3): ReLU()\n",
+       "    (4): Linear(in_features=100, out_features=20, bias=True)\n",
+       "  )\n",
+       "  (deconv_liftNN): Sequential(\n",
+       "    (0): Linear(in_features=20, out_features=100, bias=True)\n",
+       "    (1): ReLU()\n",
+       "    (2): Linear(in_features=100, out_features=100, bias=True)\n",
+       "    (3): ReLU()\n",
+       "    (4): Linear(in_features=100, out_features=200, bias=True)\n",
+       "  )\n",
+       "  (deconv_outputNN): ModuleList(\n",
+       "    (0-199): 200 x Sequential(\n",
+       "      (0): Linear(in_features=1, out_features=3, bias=True)\n",
+       "      (1): ReLU()\n",
+       "      (2): Linear(in_features=3, out_features=5, bias=True)\n",
+       "      (3): ReLU()\n",
+       "    )\n",
+       "  )\n",
+       ")"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "embedding_model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "872179ff-4bfd-4924-8499-1789ae70fb53",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "operator_model = op.LinearizingKoop(linearizer=op.FFLinearizer([20,30,50], [50,30,20]), koop=op.InvKoop(latent_dim=50))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "2c1ec7b6-df1c-4d6a-b951-101dcf75446f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model = ko.KoopmanModel(embedding=embedding_model, operator=operator_model)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "e0f42c5c-9665-49fe-a506-1636ff0b5264",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "KoopmanModel(\n",
+       "  (embedding): DiffeomMap(\n",
+       "    (encode_NN): Sequential(\n",
+       "      (0): Linear(in_features=200, out_features=100, bias=True)\n",
+       "      (1): ReLU()\n",
+       "      (2): Linear(in_features=100, out_features=100, bias=True)\n",
+       "      (3): ReLU()\n",
+       "      (4): Linear(in_features=100, out_features=20, bias=True)\n",
+       "    )\n",
+       "    (deconv_liftNN): Sequential(\n",
+       "      (0): Linear(in_features=20, out_features=100, bias=True)\n",
+       "      (1): ReLU()\n",
+       "      (2): Linear(in_features=100, out_features=100, bias=True)\n",
+       "      (3): ReLU()\n",
+       "      (4): Linear(in_features=100, out_features=200, bias=True)\n",
+       "    )\n",
+       "    (deconv_outputNN): ModuleList(\n",
+       "      (0-199): 200 x Sequential(\n",
+       "        (0): Linear(in_features=1, out_features=3, bias=True)\n",
+       "        (1): ReLU()\n",
+       "        (2): Linear(in_features=3, out_features=5, bias=True)\n",
+       "        (3): ReLU()\n",
+       "      )\n",
+       "    )\n",
+       "  )\n",
+       "  (operator): LinearizingKoop(\n",
+       "    (linearizer): FFLinearizer(\n",
+       "      (lin_encode): Sequential(\n",
+       "        (0): Linear(in_features=20, out_features=30, bias=True)\n",
+       "        (1): ReLU()\n",
+       "        (2): Linear(in_features=30, out_features=50, bias=True)\n",
+       "      )\n",
+       "      (lin_decode): Sequential(\n",
+       "        (0): Linear(in_features=50, out_features=30, bias=True)\n",
+       "        (1): ReLU()\n",
+       "        (2): Linear(in_features=30, out_features=20, bias=True)\n",
+       "      )\n",
+       "    )\n",
+       "    (koop): InvKoop()\n",
+       "  )\n",
+       ")"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2c1ec7b6-df1c-4d6a-b951-101dcf75446f",
+   "id": "ddf4bf9d-a714-4ea2-8a08-cdd2c621f361",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -83,7 +245,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.20"
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
