Training corrected, Validation functions added
Former-commit-id: 4641ab41eb6a2631365e0890679db30df8d048af

--- a/KOOPOMICS/input_data/pregnancy/pregnancy_preprocessing.ipynb
+++ b/KOOPOMICS/input_data/pregnancy/pregnancy_preprocessing.ipynb
@@ -4205,6 +4205,37 @@
     "df.to_csv('pregnancy_preprocessed.csv', index=False)\n",
     "interpolated_df.to_csv('pregnancy_interpolated_preprocessed.csv', index=False)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "74caed71-e2c9-4281-a447-d2ddd2b1736e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_normalized = interpolated_df.copy()\n",
+    "df_normalized = interpolated_df.apply(pd.to_numeric, errors='ignore')\n",
+    "\n",
+    "# 1.) remove high or low variance metabolites: high_variance_features; low_variance_features\n",
+    "# 2.) After Variance Inbetween Replicate Inspection, remove: metabolites_exceeding_threshold\n",
+    "# 3.) After Random Forest Feature Selection, remove: non_selected_features\n",
+    "# 4.) After PCA inspection, remove: low_loading_features\n",
+    "# 5.) Score Features by Variance Inbetween Replicate and Random Forest Feature Importance, remove: non_selected_features\n",
+    "\n",
+    "#df_normalized = df_normalized.drop(columns=non_selected_features['Metabolite'])\n",
+    "\n",
+    "features_to_normalize = df_normalized.columns[6:]\n",
+    "\n",
+    "#Normalize by average row mean\n",
+    "#-------------------------------\n",
+    "row_means = df_normalized[features_to_normalize].mean(axis=1)\n",
+    "average_row_mean = row_means.mean()\n",
+    "print(f'Average row mean: {average_row_mean}')\n",
+    "df_normalized[features_to_normalize] =  df_normalized[features_to_normalize].sub(average_row_mean, axis=0)\n",
+    "\n",
+    "df_normalized = df_normalized.reset_index(drop=True)\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
