Imports managed, setup.py and toml file updated
Former-commit-id: bf5b7d16feb2ce698221f526572fca78a366d7ca

--- a/KOOPOMICS/Developing/Testing_NonDelayKoop.ipynb
+++ b/KOOPOMICS/Developing/Testing_NonDelayKoop.ipynb
@@ -23,7 +23,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import koopomics.training as tr"
+    "import koopomics as ko"
    ]
   },
   {
@@ -44,37 +44,15 @@
     "\n",
     "train_set_df = pregnancy_df[pregnancy_df['Cohort'] == 'Discovery'].copy()\n",
     "test_set_df = pregnancy_df[pregnancy_df['Cohort'] == 'Validation (Test Set 1)'].copy()\n",
-    "train_dataloader = tr.OmicsDataloader(train_set_df, feature_list, replicate_id, time_id, \n",
+    "train_dataloader = ko.OmicsDataloader(train_set_df, feature_list, replicate_id, time_id, \n",
     "                                      batch_size=5, max_Ksteps = 10)\n",
-    "test_dataloader = tr.OmicsDataloader(test_set_df, feature_list, replicate_id, time_id, \n",
+    "test_dataloader = ko.OmicsDataloader(test_set_df, feature_list, replicate_id, time_id, \n",
     "                                     batch_size=5, max_Ksteps = 10)\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "e0ec9a07-035d-4e65-9da8-4690505b77fe",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<module 'koopomics.model' from '/Users/daviddornig/Documents/Master_Thesis/Bioinf/Code/philipp-trinh/KOOPOMICS/koopomics/model/__init__.py'>"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "import koopomics.model as mo\n",
-    "importlib.reload(mo)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
    "id": "a6e1bcf2-d5b0-4df4-b30e-d34ecd3c62e9",
    "metadata": {},
    "outputs": [
@@ -91,17 +69,17 @@
    ],
    "source": [
     "# Load Model\n",
-    "embedding_model = mo.FF_AE([264,1000,1000,10], [10,1000,1000,264],E_dropout_rates= [0,0,0,0],activation_fn='tanh')\n",
-    "operator_model = mo.InvKoop(latent_dim=10, reg='nondelay')\n",
+    "embedding_model = ko.FF_AE([264,1000,1000,10], [10,1000,1000,264],E_dropout_rates= [0,0,0,0],activation_fn='tanh')\n",
+    "operator_model = ko.InvKoop(latent_dim=10, reg='nondelay')\n",
     "\n",
     "#operator_model = mo.LinearizingKoop(linearizer=mo.FFLinearizer([60,1000,1000,60], [60,1000,1000,60], linE_dropout_rates=[0,0,0,0],activation_fn='tanh'), koop=mo.InvKoop(latent_dim=60, reg='nondelay'))\n",
     "\n",
-    "TestingKoopnondelay = mo.KoopmanModel(embedding=embedding_model, operator=operator_model)\n"
+    "TestingKoopnondelay = ko.KoopmanModel(embedding=embedding_model, operator=operator_model)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 5,
    "id": "1aaa31d0-9114-4d39-b825-9a1b1d5edaba",
    "metadata": {},
    "outputs": [
@@ -130,7 +108,6 @@
        "      (dynamics): Linear(in_features=10, out_features=10, bias=False)\n",
        "      (fixed): Linear(in_features=10, out_features=9, bias=False)\n",
        "      (flexi): Linear(in_features=10, out_features=1, bias=False)\n",
-       "      (tanh): Tanh()\n",
        "    )\n",
        "    (nondelay_bwd): dynamics_backD(\n",
        "      (dynamics): Linear(in_features=10, out_features=10, bias=False)\n",
@@ -141,7 +118,7 @@
        ")"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -152,7 +129,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
+   "id": "9e817e59-aa50-49e4-b2e0-81338a38e92f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def recursive_reload():\n",
+    "    import importlib\n",
+    "    import sys\n",
+    "    \n",
+    "    importlib.reload(ko.training.data_loader)\n",
+    "    importlib.reload(ko.training.train_utils)\n",
+    "    importlib.reload(ko.test.test_utils)\n",
+    "    importlib.reload(ko.model.build_nn_functions)\n",
+    "    importlib.reload(ko.model.embeddingANN)\n",
+    "    importlib.reload(ko.model.koopmanANN)\n",
+    "    importlib.reload(ko.model.model_loader)\n",
+    "    \n",
+    "    importlib.reload(ko.all_functions)\n",
+    "    \n",
+    "    importlib.reload(ko)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "a4b299ca-e381-4581-afcf-64cdcb465844",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "recursive_reload()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
    "id": "f586e957-fd7d-440f-84d4-420519684938",
    "metadata": {},
    "outputs": [
@@ -163,225 +175,15 @@
       "Using the CPU\n",
       "----------Training epoch--------\n",
       "----------------0---------------\n",
-      "\n",
-      "=================Epoch 0 Losses =========================\n",
-      "Total Loss: 26.806665420532227\n",
-      "FwdLoss: 1.0229501724243164\n",
-      "BwdLoss: 1.0092897415161133\n",
-      "Identity Loss: 0.9190798997879028\n",
-      "Latent Loss: 23.855148315429688\n",
-      "Inv_Cons_Loss: 0.19582334160804749\n",
-      "Temp_Cons_Loss: 0.0\n",
-      "----------Training epoch--------\n",
-      "----------------1---------------\n",
-      "\n",
-      "=================Epoch 1 Losses =========================\n",
-      "Total Loss: 8.439932823181152\n",
-      "FwdLoss: 1.0785481929779053\n",
-      "BwdLoss: 1.067700982093811\n",
-      "Identity Loss: 1.0680198669433594\n",
-      "Latent Loss: 5.225447177886963\n",
-      "Inv_Cons_Loss: 0.21685773134231567\n",
-      "Temp_Cons_Loss: 0.0\n",
-      "----------Training epoch--------\n",
-      "----------------2---------------\n",
-      "\n",
-      "=================Epoch 2 Losses =========================\n",
-      "Total Loss: 4.444840908050537\n",
-      "FwdLoss: 1.0851131677627563\n",
-      "BwdLoss: 1.0933667421340942\n",
-      "Identity Loss: 1.1050992012023926\n",
-      "Latent Loss: 1.1610441207885742\n",
-      "Inv_Cons_Loss: 0.2179541289806366\n",
-      "Temp_Cons_Loss: 0.0\n",
-      "----------Training epoch--------\n",
-      "----------------3---------------\n",
-      "\n",
-      "=================Epoch 3 Losses =========================\n",
-      "Total Loss: 4.896895885467529\n",
-      "FwdLoss: 1.2933584451675415\n",
-      "BwdLoss: 1.2839020490646362\n",
-      "Identity Loss: 1.230785608291626\n",
-      "Latent Loss: 1.0885982513427734\n",
-      "Inv_Cons_Loss: 0.2512650489807129\n",
-      "Temp_Cons_Loss: 0.0\n",
-      "----------Training epoch--------\n",
-      "----------------4---------------\n",
-      "\n",
-      "=================Epoch 4 Losses =========================\n",
-      "Total Loss: 2.387159585952759\n",
-      "FwdLoss: 0.7358976602554321\n",
-      "BwdLoss: 0.7411607503890991\n",
-      "Identity Loss: 0.7296327948570251\n",
-      "Latent Loss: 0.18032711744308472\n",
-      "Inv_Cons_Loss: 0.14119774103164673\n",
-      "Temp_Cons_Loss: 0.0\n",
-      "----------Training epoch--------\n",
-      "----------------5---------------\n",
-      "\n",
-      "=================Epoch 5 Losses =========================\n",
-      "Total Loss: 2.8421924114227295\n",
-      "FwdLoss: 0.867267906665802\n",
-      "BwdLoss: 0.8521477580070496\n",
-      "Identity Loss: 0.8424379229545593\n",
-      "Latent Loss: 0.280158132314682\n",
-      "Inv_Cons_Loss: 0.180606871843338\n",
-      "Temp_Cons_Loss: 0.0\n",
-      "----------Training epoch--------\n",
-      "----------------6---------------\n",
-      "\n",
-      "=================Epoch 6 Losses =========================\n",
-      "Total Loss: 2.993354082107544\n",
-      "FwdLoss: 0.9016513228416443\n",
-      "BwdLoss: 0.9088175296783447\n",
-      "Identity Loss: 0.899520754814148\n",
-      "Latent Loss: 0.28319165110588074\n",
-      "Inv_Cons_Loss: 0.17279087007045746\n",
-      "Temp_Cons_Loss: 0.0\n",
-      "----------Training epoch--------\n",
-      "----------------7---------------\n",
-      "\n",
-      "=================Epoch 7 Losses =========================\n",
-      "Total Loss: 2.826876401901245\n",
-      "FwdLoss: 0.8797194361686707\n",
-      "BwdLoss: 0.8701331615447998\n",
-      "Identity Loss: 0.8611958026885986\n",
-      "Latent Loss: 0.21564611792564392\n",
-      "Inv_Cons_Loss: 0.1819530725479126\n",
-      "Temp_Cons_Loss: 0.0\n",
-      "----------Training epoch--------\n",
-      "----------------8---------------\n",
-      "\n",
-      "=================Epoch 8 Losses =========================\n",
-      "Total Loss: 2.753833770751953\n",
-      "FwdLoss: 0.8731022477149963\n",
-      "BwdLoss: 0.8715431690216064\n",
-      "Identity Loss: 0.8634891510009766\n",
-      "Latent Loss: 0.1455267369747162\n",
-      "Inv_Cons_Loss: 0.1726585030555725\n",
-      "Temp_Cons_Loss: 0.0\n",
-      "----------Training epoch--------\n",
-      "----------------9---------------\n",
-      "\n",
-      "=================Epoch 9 Losses =========================\n",
-      "Total Loss: 2.317394971847534\n",
-      "FwdLoss: 0.7204923629760742\n",
-      "BwdLoss: 0.7007741928100586\n",
-      "Identity Loss: 0.6774145364761353\n",
-      "Latent Loss: 0.21857629716396332\n",
-      "Inv_Cons_Loss: 0.13751694560050964\n",
-      "Temp_Cons_Loss: 0.0\n",
-      "----------Training epoch--------\n",
-      "----------------10---------------\n",
-      "\n",
-      "=================Epoch 10 Losses =========================\n",
-      "Total Loss: 2.5886199474334717\n",
-      "FwdLoss: 0.8314019441604614\n",
-      "BwdLoss: 0.8406572937965393\n",
-      "Identity Loss: 0.8099635243415833\n",
-      "Latent Loss: 0.10643542557954788\n",
-      "Inv_Cons_Loss: 0.16173729300498962\n",
-      "Temp_Cons_Loss: 0.0\n",
-      "----------Training epoch--------\n",
-      "----------------11---------------\n",
-      "\n",
-      "=================Epoch 11 Losses =========================\n",
-      "Total Loss: 3.4790079593658447\n",
-      "FwdLoss: 1.0941715240478516\n",
-      "BwdLoss: 1.1008782386779785\n",
-      "Identity Loss: 1.048021912574768\n",
-      "Latent Loss: 0.23572327196598053\n",
-      "Inv_Cons_Loss: 0.21291577816009521\n",
-      "Temp_Cons_Loss: 0.0\n",
-      "----------Training epoch--------\n",
-      "----------------12---------------\n",
-      "\n",
-      "=================Epoch 12 Losses =========================\n",
-      "Total Loss: 3.091660499572754\n",
-      "FwdLoss: 0.9957618117332458\n",
-      "BwdLoss: 1.014326810836792\n",
-      "Identity Loss: 0.9712227582931519\n",
-      "Latent Loss: 0.11015439033508301\n",
-      "Inv_Cons_Loss: 0.19465908408164978\n",
-      "Temp_Cons_Loss: 0.0\n",
-      "----------Training epoch--------\n",
-      "----------------13---------------\n",
-      "\n",
-      "=================Epoch 13 Losses =========================\n",
-      "Total Loss: 2.404618978500366\n",
-      "FwdLoss: 0.7684923410415649\n",
-      "BwdLoss: 0.8036876916885376\n",
-      "Identity Loss: 0.769974946975708\n",
-      "Latent Loss: 0.06232871487736702\n",
-      "Inv_Cons_Loss: 0.13511145114898682\n",
-      "Temp_Cons_Loss: 0.0\n",
-      "----------Training epoch--------\n",
-      "----------------14---------------\n",
-      "\n",
-      "=================Epoch 14 Losses =========================\n",
-      "Total Loss: 2.098633050918579\n",
-      "FwdLoss: 0.6945524215698242\n",
-      "BwdLoss: 0.6911470293998718\n",
-      "Identity Loss: 0.675040066242218\n",
-      "Latent Loss: 0.037746235728263855\n",
-      "Inv_Cons_Loss: 0.14730602502822876\n",
-      "Temp_Cons_Loss: 0.0\n",
-      "----------Training epoch--------\n",
-      "----------------15---------------\n",
-      "\n",
-      "=================Epoch 15 Losses =========================\n",
-      "Total Loss: 2.2223119735717773\n",
-      "FwdLoss: 0.650906503200531\n",
-      "BwdLoss: 0.6606982350349426\n",
-      "Identity Loss: 0.658970057964325\n",
-      "Latent Loss: 0.25159764289855957\n",
-      "Inv_Cons_Loss: 0.13944122195243835\n",
-      "Temp_Cons_Loss: 0.0\n",
-      "----------Training epoch--------\n",
-      "----------------16---------------\n",
-      "\n",
-      "=================Epoch 16 Losses =========================\n",
-      "Total Loss: 2.601341485977173\n",
-      "FwdLoss: 0.859123706817627\n",
-      "BwdLoss: 0.8445379734039307\n",
-      "Identity Loss: 0.8039762377738953\n",
-      "Latent Loss: 0.09354257583618164\n",
-      "Inv_Cons_Loss: 0.16082918643951416\n",
-      "Temp_Cons_Loss: 0.0\n",
-      "----------Training epoch--------\n",
-      "----------------17---------------\n",
-      "\n",
-      "=================Epoch 17 Losses =========================\n",
-      "Total Loss: 2.6723263263702393\n",
-      "FwdLoss: 0.8827414512634277\n",
-      "BwdLoss: 0.8844335675239563\n",
-      "Identity Loss: 0.8669087886810303\n",
-      "Latent Loss: 0.03807453811168671\n",
-      "Inv_Cons_Loss: 0.16818735003471375\n",
-      "Temp_Cons_Loss: 0.0\n",
-      "----------Training epoch--------\n",
-      "----------------18---------------\n",
-      "\n",
-      "=================Epoch 18 Losses =========================\n",
-      "Total Loss: 2.9017038345336914\n",
-      "FwdLoss: 0.9550634026527405\n",
-      "BwdLoss: 0.9590650796890259\n",
-      "Identity Loss: 0.9122062921524048\n",
-      "Latent Loss: 0.07518548518419266\n",
-      "Inv_Cons_Loss: 0.18352586030960083\n",
-      "Temp_Cons_Loss: 0.0\n",
-      "----------Training epoch--------\n",
-      "----------------19---------------\n",
-      "\n",
+      "hello4\n",
       "Training interrupted. Saving model...\n"
      ]
     }
    ],
    "source": [
-    "importlib.reload(tr)\n",
     "\n",
     "# Run training loop\n",
-    "tr.train(TestingKoopnondelay, train_dataloader, test_dataloader,\n",
+    "ko.train(TestingKoopnondelay, train_dataloader, test_dataloader,\n",
     "         lr= 0.001, learning_rate_change=0.8, loss_weights=[1,1,1,1,0.001,0],\n",
     "         num_epochs=300, decayEpochs=[3, 6, 9, 12, 15, 18, 21, 24, 27],\n",
     "         weight_decay=0, gradclip=1, max_Kstep=10, mask_value=-2,\n",
