--- a/KOOPOMICS/Developing/Testing_NonDelayKoop.ipynb
+++ b/KOOPOMICS/Developing/Testing_NonDelayKoop.ipynb
@@ -237,12 +237,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 12,
    "id": "bd515dd0-e745-4d61-8b62-c183480ee50e",
    "metadata": {},
    "outputs": [],
    "source": [
-    "bwdmatrix,fwdmatrix = TestingKoopnondelay.kmatrix()\n",
+    "bwdmatrix,fwdmatrix = TestingKoop.kmatrix()\n",
     "bwdM = bwdmatrix.detach()\n",
     "fwdM = fwdmatrix.detach()\n",
     "#fwdinv = np.linalg.inv(fwdM)"
@@ -250,7 +250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 13,
    "id": "d66c9c32-41fc-4982-b859-d8a4909c4902",
    "metadata": {},
    "outputs": [
